; ModuleID = '/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_read_once.c'
source_filename = "/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_read_once.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @strbuf_read_once(%struct.strbuf* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.strbuf*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.strbuf* %0, %struct.strbuf** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %9 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %10 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  store i64 %11, i64* %7, align 8
  %12 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %13 = load i64, i64* %6, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = load i64, i64* %6, align 8
  br label %18

17:                                               ; preds = %3
  br label %18

18:                                               ; preds = %17, %15
  %19 = phi i64 [ %16, %15 ], [ 8192, %17 ]
  %20 = call i32 @strbuf_grow(%struct.strbuf* %12, i64 %19)
  %21 = load i32, i32* %5, align 4
  %22 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %23 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %22, i32 0, i32 2
  %24 = load i64, i64* %23, align 8
  %25 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %26 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = add i64 %24, %27
  %29 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %30 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %33 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %32, i32 0, i32 1
  %34 = load i64, i64* %33, align 8
  %35 = sub i64 %31, %34
  %36 = sub i64 %35, 1
  %37 = call i64 @xread(i32 %21, i64 %28, i64 %36)
  store i64 %37, i64* %8, align 8
  %38 = load i64, i64* %8, align 8
  %39 = icmp sgt i64 %38, 0
  br i1 %39, label %40, label %48

40:                                               ; preds = %18
  %41 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %42 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %43 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %42, i32 0, i32 1
  %44 = load i64, i64* %43, align 8
  %45 = load i64, i64* %8, align 8
  %46 = add i64 %44, %45
  %47 = call i32 @strbuf_setlen(%struct.strbuf* %41, i64 %46)
  br label %55

48:                                               ; preds = %18
  %49 = load i64, i64* %7, align 8
  %50 = icmp eq i64 %49, 0
  br i1 %50, label %51, label %54

51:                                               ; preds = %48
  %52 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %53 = call i32 @strbuf_release(%struct.strbuf* %52)
  br label %54

54:                                               ; preds = %51, %48
  br label %55

55:                                               ; preds = %54, %40
  %56 = load i64, i64* %8, align 8
  ret i64 %56
}

declare dso_local i32 @strbuf_grow(%struct.strbuf*, i64) #1

declare dso_local i64 @xread(i32, i64, i64) #1

declare dso_local i32 @strbuf_setlen(%struct.strbuf*, i64) #1

declare dso_local i32 @strbuf_release(%struct.strbuf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
